<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WAYD</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>
    <string name="new_event">New Event</string>
    <string name="new_picture">New Schedule</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="delete_crime">Delete</string>
    <string name="subtitle">If you see something, say something</string>
    <string name="events_title">My Events</string>
    <string name="edit_button">Edit</string>
    <string name="event_title_label">Event Title</string>
    <string name="event_title">Event Title</string>
    <string name="event_time">Event Time</string>
    <string name="event_location">Event Location</string>
    <string name="event_description">Event Description</string>
    <string name="date_picker_title">Date Of Event</string>
    <string name="time_picker_title">Time Of Event</string>
 
	<string name="settime">Set Time</string> 
	<string name="setdate">Set Date</string>
 	<string name="take_photo">Take Photo</string>
 	<string name="choose_existing">Choose Existing</string>
 	<string name="my_schedule">My Schedule</string>
 	<string name="create_event">Create Event</string>
 	<string name="instruction">Instruction</string>

</resources>
